# auto-refactor-ai

./: .auto-refactor-ai-ci.toml  .auto-refactor-ai.toml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  V10_COMPLETION_SUMMARY.md  V11_COMPLETION_SUMMARY.md  V12_COMPLETION_SUMMARY.md  V3_COMPLETION_SUMMARY.md  V4_COMPLETION_SUMMARY.md  V5_COMPLETION_SUMMARY.md  V6_COMPLETION_SUMMARY.md  V7_COMPLETION_SUMMARY.md  coverage.xml  pyproject.toml  test_report.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: test.yml
auto_refactor_ai/: ai_suggestions.py  analyzer.py  auto_refactor.py  cli.py  config.py  explanations.py  git_utils.py  llm_providers.py  lsp_server.py  project_analyzer.py  refactor_planner.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  LEARNING_GUIDE.md  PROJECT_OVERVIEW.md  PUBLISHING_GUIDE.md  README.md  ROADMAP.md
docs/versions/: V0_GUIDE.md  V10_GUIDE.md  V11_GUIDE.md  V1_GUIDE.md  V2_GUIDE.md  V3_GUIDE.md  V4_GUIDE.md  V5_GUIDE.md  V6_GUIDE.md  V7_GUIDE.md  V8_GUIDE.md  V9_GUIDE.md
examples/: .auto-refactor-ai.yaml  README.md  config-relaxed.toml  config-strict.toml
examples/before_after/deep_nesting/: after.py  before.py
examples/before_after/long_function/: after.py  before.py
examples/before_after/too_many_params/: after.py  before.py
scripts/: verify_install.py
test_files/: README.md  sample_test.py  test_ai_refactoring.py  test_api_patterns.py  test_clean_code.py  test_combined_issues.py  test_data_processing.py  test_duplicates_a.py  test_duplicates_b.py  test_duplicates_pair_a.py  test_duplicates_pair_b.py  test_edge_cases.py  test_length_issues.py  test_modern_python.py  test_nesting_issues.py  test_parameter_issues.py  test_perfect_code.py  test_real_world_patterns.py  test_sample.py
tests/: __init__.py  test_ai_suggestions.py  test_ai_suggestions_extended.py  test_analyzer.py  test_auto_refactor.py  test_auto_refactor_extended.py  test_cli.py  test_cli_extended.py  test_cli_handlers.py  test_cli_project.py  test_config.py  test_config_extended.py  test_explanations.py  test_git_utils.py  test_integration_coverage.py  test_llm_providers.py  test_llm_providers_extended.py  test_lsp_server.py  test_project_analyzer.py  test_refactor_planner.py  test_refactor_planner_v10.py
vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  auto-refactor-ai-0.11.0.vsix  package-lock.json  package.json
vscode-extension/src/: extension.ts
