[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-refactor-ai"
version = "0.11.0"
description = "AI-powered static analyzer for Python with LLM suggestions, project analysis, git integration, refactoring plans, and LSP server"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["refactoring", "static-analysis", "code-quality", "linting", "ast", "complexity", "ai", "llm", "gpt"]
authors = [
    {name = "Auto Refactor AI Contributors", email = "auto-refactor-ai@example.com"}
]
maintainers = [
    {name = "Auto Refactor AI Contributors", email = "auto-refactor-ai@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
# V6: AI/LLM provider dependencies
ai = [
    "openai>=1.0.0",
]
ai-anthropic = [
    "anthropic>=0.18.0",
]
ai-google = [
    "google-generativeai>=0.4.0",
]
ai-all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",
]
# V11: Language Server Protocol support
lsp = [
    "pygls>=1.0.0",
]


[project.scripts]
auto-refactor-ai = "auto_refactor_ai.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/auto-refactor-ai"
Repository = "https://github.com/yourusername/auto-refactor-ai"
Issues = "https://github.com/yourusername/auto-refactor-ai/issues"
Documentation = "https://github.com/yourusername/auto-refactor-ai#readme"
Changelog = "https://github.com/yourusername/auto-refactor-ai/blob/main/CHANGELOG.md"

[tool.auto-refactor-ai]
max_function_length = 30
max_parameters = 5
max_nesting_depth = 3
enabled_rules = ["function-too-long", "too-many-parameters", "deep-nesting"]

[tool.setuptools.packages.find]
where = ["."]
include = ["auto_refactor_ai*"]
exclude = ["tests*", "test_files*", "examples*"]

[tool.setuptools.package-data]
auto_refactor_ai = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=auto_refactor_ai",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["auto_refactor_ai"]
omit = [
    "tests/*",
    "test_files/*",
    "scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | \.eggs
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
